# pytexgen

./: .gitignore  AGENT.md  CMakeLists.txt  README.md  README_pypi.md  bench_gpu_voxelizer_backends.py  pyproject.toml  test_gpu_voxelizer.py  test_gpu_voxelizer_backends.py  test_voxel.py
.claude/: settings.local.json
.github/workflows/: build.yml
CSparse/: CMakeLists.txt
Core/: AdjustMeshInterference.cpp  BasicVolumes.cpp  BendingPeriodicBoundaries.cpp  BendingPeriodicBoundaries.h  CMakeLists.txt  GeometrySolver.cpp  Mesh.cpp  Mesh.h  Misc.h  ObjectContainer.h  OctreeVoxelMesh.cpp  OctreeVoxelMesh.h  SimulationAbaqus.cpp  TetgenMesh.cpp  TetgenMesh.h  TexGen.cpp  TexGen.h  Textile.cpp  Yarn.cpp  YarnSectionInterpNode.cpp  YarnSectionInterpPosition.cpp  mymath.h  tetgen.h
LatinHypercube/: CMakeLists.txt
Octree/: CMakeLists.txt
Python/: CMakeLists.txt  Core.i  Core.py  Core_wrap.h
Python/Lib/: Abaqus.py  Ansys.py  GridFile.py  TexGenv2.py  WeavePattern.py  WiseTex.py
Python/Tests/: AbaqusTest.py  FlowTexTest.py  GridFileTest.py  TestUtils.py  TexGenv2Test.py  WiseTexTest.py
TexGen/: Core.py  Export.py  FlowTex.py  Renderer.py  WeavePattern.py  WiseTex.py  __init__.py  gpu_voxelizer.py
Triangle/: CMakeLists.txt  triangle_config.h
docs/: api_reference.md  voxel_backends.md
script/: bench_sic_sic_rve_parallel.py  generate_api_reference.py  inp_viewer.py  params_sic_sic_3x5_rve.json  params_sic_sic_x4_y2_z1_rve.json  params_weft_knit_composite_rve.json  rve_export.py  shallow_cross_layer_to_layer.py  sic_sic_shallow_cross_straight.py  weft_knit_composite.py
src/pytexgen/: __init__.py  _core_docs.py
tetgenlib/: CMakeLists.txt  tetgen.h
tinyxml/: CMakeLists.txt
units/: units.c
